# Elog

./: .gitignore  CMakeLists.txt  main.cpp
elog/: CMakeLists.txt  async_logger.hpp  async_logger_fast.hpp  buffer_fast.hpp  context.h  current_thread.h  logger.h  timestamp.cpp  timestamp.h
logger/: async_logging.cpp  async_logging.h  context.hpp  current_thread.hpp  file_appender.cpp  file_appender.h  fixed_buffer.hpp  flags.hpp  formatter.hpp  log_file.cpp  log_file.h  logger.cpp  logger.h  noncopyable.hpp  time_stamp.cpp  time_stamp.h
test/: CMakeLists.txt  bench.cpp
